Fixed navigation bar spacing -GH

--- a/index.css
+++ b/index.css
@@ -9,14 +9,14 @@ body {
 }
 
 @font-face {
-  font-family: Tahoma;
-  src: url(fonts/tahoma.ttf);
+	font-family: Tahoma;
+	src: url(fonts/tahoma.ttf);
 }
 
 @font-face {
-  font-family: Tahoma;
-  src: url(fonts/tahomabd.ttf);
-  font-weight: bold;
+	font-family: Tahoma;
+	src: url(fonts/tahomabd.ttf);
+	font-weight: bold;
 }
 
 /* Navigation bar */
@@ -33,8 +33,8 @@ body {
 
 /* Navigation bar links */
 .navBar a {
-  opacity: 1.0;
-  transition: .4s;
+	opacity: 1.0;
+	transition: .4s;
 }
 
 /* Navigation bar left elements */
@@ -44,8 +44,9 @@ body {
 	font-size: 45px;
 	display: block;
 	color: #333;
+	letter-spacing: -1px;
 	text-align: center;
-	padding: 19px 0px 0px 28px;
+	padding: 19px 0px 0px 25px;
 	text-decoration: none;
 	position: relative;
 	vertical-align: middle;
@@ -59,6 +60,7 @@ body {
 	float: right;
 	display: block;
 	color: #f2f2f2;
+	letter-spacing: -1px;
 	text-align: right;
 	padding: 11px 18px 6px 12px;
 	text-decoration: none;
@@ -68,56 +70,55 @@ body {
 
 /* Navigation bar logo image */
 .navBar img {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 23px 12px 22px 25px;
-  text-decoration: none;
-  position: relative;
-  vertical-align: middle;
+	float: left;
+	display: block;
+	color: #f2f2f2;
+	text-align: center;
+	padding: 23px 12px 22px 23px;
+	text-decoration: none;
+	position: relative;
+	vertical-align: middle;
 }
 
 /* Navigation bar left elements link settings */
 .navBarInnerLeft a {
-  float: left;
-  font-family: Tahoma;
-  font-size: 55px;
-  display: block;
-  color: #333;
-  text-align: center;
-  padding: 16px 0px 0px 20px;
-  text-decoration: none;
-  position: relative;
-  vertical-align: middle;
-  font-weight: bold;
+	float: left;
+	font-family: Tahoma;
+	font-size: 55px;
+	display: block;
+	color: #333;
+	text-align: center;
+	padding: 16px 0px 0px 20px;
+	text-decoration: none;
+	position: relative;
+	vertical-align: middle;
+	font-weight: bold;
 }
 
 /* Navigation bar right elements link settings */
 .navBarInnerRight a {
-  float: right;
-  font-family: Tahoma;
-  font-weight: bold;
-  font-size:16px;
-  display: block;
-  color: #333;
-  text-align: center;
-  text-decoration: none;
-  padding: 26px 25px 0px 25px;
-  position: relative;
-  vertical-align: middle;
-  
+	float: right;
+	font-family: Tahoma;
+	font-weight: bold;
+	font-size:16px;
+	display: block;
+	color: #333;
+	text-align: center;
+	text-decoration: none;
+	padding: 26px 23px 0px 23px;
+	position: relative;
+	vertical-align: middle;
 	transition: .4s;
 }
 
 /* Navigation bar links (mouse-over settings) */
 .navBar a:hover {
-  opacity: 0.4;
+	opacity: 0.4;
 }
 
 /* Navigation bar links (mouse-over settings) */
 .navBarInnerRight a:hover {
-  opacity: 0.4;
+	opacity: 0.4;
 }
 
 
